--- a/qt/scandialog.ui
+++ b/qt/scandialog.ui
@@ -1,151 +1,134 @@
-<!DOCTYPE UI><UI version="3.3" stdsetdef="1">
-<class>ScanDialog</class>
-<widget class="QDialog">
-    <property name="name">
-        <cstring>ScanDialog</cstring>
-    </property>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0" stdsetdef="1">
+  <author></author>
+  <comment></comment>
+  <exportmacro></exportmacro>
+  <class>ScanDialog</class>
+  <widget class="QDialog" name="ScanDialog">
     <property name="geometry">
-        <rect>
-            <x>0</x>
-            <y>0</y>
-            <width>341</width>
-            <height>291</height>
-        </rect>
+      <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>341</width>
+        <height>291</height>
+      </rect>
     </property>
-    <property name="caption">
-        <string>Bluetooth Scan Results</string>
+    <property name="windowTitle">
+      <string>Bluetooth Scan Results</string>
     </property>
     <property name="sizeGripEnabled">
-        <bool>true</bool>
+      <bool>true</bool>
     </property>
-    <widget class="QLayoutWidget">
-        <property name="name">
-            <cstring>Layout1</cstring>
+    <widget class="QWidget" name="Layout1">
+      <property name="geometry">
+        <rect>
+          <x>20</x>
+          <y>240</y>
+          <width>300</width>
+          <height>31</height>
+        </rect>
+      </property>
+      <layout class="QHBoxLayout">
+        <property name="margin">
+          <number>0</number>
         </property>
-        <property name="geometry">
-            <rect>
-                <x>20</x>
-                <y>240</y>
-                <width>300</width>
-                <height>31</height>
-            </rect>
+        <property name="spacing">
+          <number>6</number>
         </property>
-        <hbox>
-            <property name="name">
-                <cstring>unnamed</cstring>
+        <item>
+          <widget class="QPushButton" name="buttonHelp">
+            <property name="enabled">
+              <bool>false</bool>
             </property>
-            <property name="margin">
-                <number>0</number>
+            <property name="text">
+              <string>&amp;Help</string>
             </property>
-            <property name="spacing">
-                <number>6</number>
+            <property name="shortcut">
+              <string>F1</string>
             </property>
-            <widget class="QPushButton">
-                <property name="name">
-                    <cstring>buttonHelp</cstring>
-                </property>
-                <property name="enabled">
-                    <bool>false</bool>
-                </property>
-                <property name="text">
-                    <string>&amp;Help</string>
-                </property>
-                <property name="accel">
-                    <string>F1</string>
-                </property>
-                <property name="autoDefault">
-                    <bool>true</bool>
-                </property>
-            </widget>
-            <spacer>
-                <property name="name">
-                    <cstring>Horizontal Spacing2</cstring>
-                </property>
-                <property name="orientation">
-                    <enum>Horizontal</enum>
-                </property>
-                <property name="sizeType">
-                    <enum>Expanding</enum>
-                </property>
-                <property name="sizeHint">
-                    <size>
-                        <width>20</width>
-                        <height>20</height>
-                    </size>
-                </property>
-            </spacer>
-            <widget class="QPushButton">
-                <property name="name">
-                    <cstring>buttonOk</cstring>
-                </property>
-                <property name="text">
-                    <string>B&amp;ond</string>
-                </property>
-                <property name="accel">
-                    <string>Alt+O</string>
-                </property>
-                <property name="autoDefault">
-                    <bool>true</bool>
-                </property>
-                <property name="default">
-                    <bool>true</bool>
-                </property>
-            </widget>
-            <widget class="QPushButton">
-                <property name="name">
-                    <cstring>buttonCancel</cstring>
-                </property>
-                <property name="text">
-                    <string>&amp;Cancel</string>
-                </property>
-                <property name="accel">
-                    <string></string>
-                </property>
-                <property name="autoDefault">
-                    <bool>true</bool>
-                </property>
-            </widget>
-        </hbox>
+            <property name="autoDefault">
+              <bool>true</bool>
+            </property>
+          </widget>
+        </item>
+        <item>
+          <spacer name="Horizontal Spacing2">
+            <property name="sizeHint">
+              <size>
+                <width>20</width>
+                <height>20</height>
+              </size>
+            </property>
+            <property name="sizeType">
+              <enum>QSizePolicy::Expanding</enum>
+            </property>
+            <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+            </property>
+          </spacer>
+        </item>
+        <item>
+          <widget class="QPushButton" name="buttonOk">
+            <property name="text">
+              <string>B&amp;ond</string>
+            </property>
+            <property name="shortcut">
+              <string>Alt+O</string>
+            </property>
+            <property name="autoDefault">
+              <bool>true</bool>
+            </property>
+            <property name="default">
+              <bool>true</bool>
+            </property>
+          </widget>
+        </item>
+        <item>
+          <widget class="QPushButton" name="buttonCancel">
+            <property name="text">
+              <string>&amp;Cancel</string>
+            </property>
+            <property name="shortcut">
+              <string/>
+            </property>
+            <property name="autoDefault">
+              <bool>true</bool>
+            </property>
+          </widget>
+        </item>
+      </layout>
     </widget>
-    <widget class="QListBox">
-        <property name="name">
-            <cstring>ScanResultsList</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>20</x>
-                <y>20</y>
-                <width>300</width>
-                <height>200</height>
-            </rect>
-        </property>
+    <widget class="Q3ListBox" name="ScanResultsList">
+      <property name="geometry">
+        <rect>
+          <x>20</x>
+          <y>20</y>
+          <width>300</width>
+          <height>200</height>
+        </rect>
+      </property>
     </widget>
-</widget>
-<connections>
+  </widget>
+  <layoutdefault spacing="6" margin="11"/>
+  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+  <connections>
     <connection>
-        <sender>buttonOk</sender>
-        <signal>clicked()</signal>
-        <receiver>ScanDialog</receiver>
-        <slot>accept()</slot>
+      <sender>buttonOk</sender>
+      <signal>clicked()</signal>
+      <receiver>ScanDialog</receiver>
+      <slot>accept()</slot>
     </connection>
     <connection>
-        <sender>buttonCancel</sender>
-        <signal>clicked()</signal>
-        <receiver>ScanDialog</receiver>
-        <slot>reject()</slot>
+      <sender>buttonCancel</sender>
+      <signal>clicked()</signal>
+      <receiver>ScanDialog</receiver>
+      <slot>reject()</slot>
     </connection>
     <connection>
-        <sender>ScanResultsList</sender>
-        <signal>selectionChanged(QListBoxItem*)</signal>
-        <receiver>ScanDialog</receiver>
-        <slot>SelectDevice(QListBoxItem*)</slot>
+      <sender>ScanResultsList</sender>
+      <signal>selectionChanged(Q3ListBoxItem*)</signal>
+      <receiver>ScanDialog</receiver>
+      <slot>SelectDevice(Q3ListBoxItem*)</slot>
     </connection>
-</connections>
-<includes>
-    <include location="local" impldecl="in implementation">scandialog.ui.h</include>
-</includes>
-<slots>
-    <slot>SelectDevice( QListBoxItem * )</slot>
-</slots>
-<layoutdefaults spacing="6" margin="11"/>
-</UI>
+  </connections>
+</ui>
